@@ -1,4 +1,6 @@
 Changes with Apache 2.0.33-dev
+  *) Win32: Fix bug in mod_status with displaying "Restart Time"
+     [Bill Stoddard]
 
   *) Fix IPv6 name-based virtual hosts.  [Jeff Trawick]
 
